--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=stock-trading-engine
 server.port=8080
 
 spring.main.allow-circular-references=true
+spring.http.compression.enabled=true
+spring.http.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+spring.http.compression.min-response-size=2048
